# Haystack

./: .gitignore  API_ENDPOINTS.md  CMakeLists.txt  Haystack.csproj  Haystack.http  Program.cs  README.md  appsettings.json  data_index.idx  forward_index.idx
Controllers/: SearchController.cs
DataObjects/: CompoundKey.cs  Post.cs
Indexing/: DataIndex.cs  ForwardIndex.cs  ISAMStorage.cs  InvertedIndex.cs  Lexicon.cs  StopWordFilter.cs
Properties/: launchSettings.json
Services/: AutocompleteService.cs  QueryService.cs
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: comment.hpp  compound_key.hpp  data_index.hpp  forward_index.hpp  isam_storage.hpp  lexicon.hpp  post.hpp  reverse_index.hpp  utils.hpp
core/include/haystack/: lexicon.hpp
core/src/: compound_key.cpp  data_index.cpp  forward_index.cpp  isam_storage.cpp  lexicon.cpp  reverse_index.cpp  utils.cpp
lib/: CMakeLists.txt
lib/html_parser/: html_parser.hpp
stackexchange-data/: barrel_0.idx  barrel_1.idx  barrel_2.idx  barrel_3.idx  data_index.idx  forward_index.idx  lexicon.txt  reverse_index.idx  vocab.txt
